front-end/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ev-chargers-frontend
  name: ev-chargers-frontend
spec:
  ports:
    - name: 8080-tcp
      port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: ev-chargers-frontend
