front-end/k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: ev-chargers-frontend
  name: ev-chargers-frontend
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: ev-chargers-frontend
    weight: 100
